fixed updating original references issues and text showing in xml layouts

--- a/app/src/main/res/layout/activity_add_new_req_work_experience.xml
+++ b/app/src/main/res/layout/activity_add_new_req_work_experience.xml
@@ -69,8 +69,8 @@
         android:layout_height="120dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:hint="Derscription"
         android:inputType="text"
-        android:text="Enter a Derscription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.698"
         app:layout_constraintStart_toStartOf="parent"
