--- a/app/src/main/res/layout/recycler_view_language_knowledge_row.xml
+++ b/app/src/main/res/layout/recycler_view_language_knowledge_row.xml
@@ -35,7 +35,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="8dp"
-                android:text="Descreption"
+                android:text="Description"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
