--- a/app/src/main/res/layout/recycler_view_work_experience_row.xml
+++ b/app/src/main/res/layout/recycler_view_work_experience_row.xml
@@ -22,14 +22,16 @@
                 android:id="@+id/textWorkExperienceDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
                 android:layout_marginBottom="72dp"
                 android:text="WorkExperienceDescription"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textWorkExperienceExpArea"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/textWorkExperienceExpArea"
