--- a/app/src/main/res/layout/activity_show_applications_employee.xml
+++ b/app/src/main/res/layout/activity_show_applications_employee.xml
@@ -9,9 +9,9 @@
         android:id="@+id/recyclerViewEditAccountEmployee"
         android:layout_width="396dp"
         android:layout_height="416dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,14 +22,16 @@
 
     <TextView
         android:id="@+id/textView69"
-        android:layout_width="195dp"
-        android:layout_height="59dp"
+        android:layout_width="309dp"
+        android:layout_height="92dp"
         android:layout_marginStart="108dp"
         android:layout_marginTop="64dp"
+        android:layout_marginEnd="117dp"
         android:text="Employee Applications:"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
